--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="collapse" id="myNavbar">
       <ul class="nav navbar-nav visible-xs">
         <li><a class="menu-item" href="#">Chicken</a></li>
-        <li><a class="menu-item" href="#">Beef</a></li> 
+        <li><a class="menu-item" href="#">Litti-Chokha</a></li> 
         <li><a class="menu-item" href="#">Sushi</a></li> 
       </ul>
     </div>
